--- a/Labs/Python_Lab_1.2.ipynb
+++ b/Labs/Python_Lab_1.2.ipynb
@@ -22,11 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Favorite Movie Details:\n",
+      "Title: Interstellar\n",
+      "Year Released: 2014\n",
+      "Rating: 9.3/10\n",
+      "Watched: Yes\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Creating a tuple with favorite movie details\n",
+    "favorite_movie = (\"Interstellar\", 2014, 9.3, True)\n",
+    "\n",
+    "# Printing the details\n",
+    "print(\"Favorite Movie Details:\")\n",
+    "print(f\"Title: {favorite_movie[0]}\")\n",
+    "print(f\"Year Released: {favorite_movie[1]}\")\n",
+    "print(f\"Rating: {favorite_movie[2]}/10\")\n",
+    "print(f\"Watched: {'Yes' if favorite_movie[3] else 'No'}\")\n"
    ]
   },
   {
@@ -40,11 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Favorite Colors:\n",
+      "Purple\n",
+      "Black\n",
+      "Blue\n",
+      "Red\n",
+      "Green\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Creating a set of 5 favorite colors\n",
+    "favorite_colors = {\"Blue\", \"Red\", \"Green\", \"Black\", \"Purple\"}\n",
+    "\n",
+    "# Printing all the colors\n",
+    "print(\"My Favorite Colors:\")\n",
+    "for color in favorite_colors:\n",
+    "    print(color)\n"
    ]
   },
   {
@@ -58,11 +97,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Friends' Information:\n",
+      "Name: Alaa\n",
+      "Age: 25\n",
+      "Favorite Hobby: Painting\n",
+      "--------------------\n",
+      "Name: shahad\n",
+      "Age: 27\n",
+      "Favorite Hobby: Cycling\n",
+      "--------------------\n",
+      "Name: nora\n",
+      "Age: 24\n",
+      "Favorite Hobby: Gaming\n",
+      "--------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Creating a dictionary to store information about 3 friends\n",
+    "friends_info = {\n",
+    "    \"Alaa\": (25, \"Painting\"),\n",
+    "    \"shahad\": (27, \"Cycling\"),\n",
+    "    \"nora\": (24, \"Gaming\")\n",
+    "}\n",
+    "\n",
+    "# Printing the details of all friends\n",
+    "print(\"Friends' Information:\")\n",
+    "for name, details in friends_info.items():\n",
+    "    print(f\"Name: {name}\")\n",
+    "    print(f\"Age: {details[0]}\")\n",
+    "    print(f\"Favorite Hobby: {details[1]}\")\n",
+    "    print(\"-\" * 20)  # Separator for readability\n"
    ]
   },
   {
@@ -76,11 +148,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have watched 'Interstellar'.\n",
+      "The color 'Blue' is in your favorite colors list.\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Movie details tuple\n",
+    "favorite_movie = (\"Interstellar\", 2014, 9.3, True)\n",
+    "\n",
+    "# Checking if the movie has been watched\n",
+    "if favorite_movie[3]:\n",
+    "    print(f\"You have watched '{favorite_movie[0]}'.\")\n",
+    "else:\n",
+    "    print(f\"You have not watched '{favorite_movie[0]}' yet.\")\n",
+    "\n",
+    "# Set of favorite colors\n",
+    "favorite_colors = {\"Blue\", \"Red\", \"Green\", \"Black\", \"Purple\"}\n",
+    "\n",
+    "# Specific color to check\n",
+    "color_to_check = \"Blue\"\n",
+    "\n",
+    "# Checking if the color is in the favorite colors set\n",
+    "if color_to_check in favorite_colors:\n",
+    "    print(f\"The color '{color_to_check}' is in your favorite colors list.\")\n",
+    "else:\n",
+    "    print(f\"The color '{color_to_check}' is not in your favorite colors list.\")\n"
    ]
   },
   {
@@ -90,8 +190,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
